--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
